# Upande-Timaflor

./: README.md  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/api/: __init__.py  payment_entry.py  tax_payment.py  withholding_tax.py
public/js/: material_request.js
stock/report/stock_ledger_no_balance_value/: stock_ledger_no_balance_value.py
upande_timaflor/: api.py  hooks.py  material_request.py  modules.txt  order_sheet_avg_consumption.py  utils.py
upande_timaflor/api/: __init__.py  custom_fields.py  payment_entry.py  tax_payment.py  tax_payment_audit.py  withholding_tax.py
upande_timaflor/custom/server_script/: order_sheet.py
upande_timaflor/fixtures/: biometric_signature.json  client_script.json  custom_docperm.json  daily_minimum_consumption.json  doctype.json  greenhouse.json  ordering_sheet.json  print_format.json  server_script.json  workspace.json
upande_timaflor/public/js/: material_request.js
upande_timaflor/report/custom_general_ledger/: custom_general_ledger.js  custom_general_ledger.py
upande_timaflor/upande_timaflor/: __init__.py
upande_timaflor/upande_timaflor/custom/: bom.json  bom_item.json  employee.json  item.json  item_barcode.json  material_request.json  material_request_item.json  material_request_notification.py  material_request_permission.json  payment_entry.json  payment_entry_deduction.json  payment_schedule.json  purchase_invoice.json  purchase_invoice_item.json  purchase_order.json  purchase_order_item.json  purchase_receipt.json  purchase_receipt_item.json  purchase_taxes_and_charges.json  warehouse.json  (+2 more)
(+54 files in other folders)
